# AuroraEngine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
apps/Editor/: CMakeLists.txt
apps/Editor/shaders/: viewport.frag.glsl  viewport.vert.glsl
apps/Editor/src/: CameraSystem.cpp  CameraSystem.hpp  EditorApp.cpp  EditorApp.hpp  RenderSystem.cpp  RenderSystem.hpp  main.cpp
apps/Runtime/: CMakeLists.txt
apps/Runtime/assets/: checker.ppm
apps/Runtime/shaders/: texture.frag.glsl  texture.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
apps/Runtime/src/: Application.cpp  Application.hpp  main.cpp
engine/: CMakeLists.txt
engine/assets/: CMakeLists.txt
engine/assets/include/Aurora/Assets/: AssetManager.hpp
engine/assets/src/: AssetManager.cpp
engine/core/: CMakeLists.txt
engine/core/include/Aurora/Core/: Log.hpp
engine/core/src/: Log.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/Aurora/Platform/: Input.hpp  Time.hpp  Window.hpp
engine/platform/src/: Time.cpp  WindowFactory.cpp
engine/platform/src/Windows/: Win32Window.cpp  Win32Window.hpp
engine/rhi/: CMakeLists.txt
engine/rhi/include/Aurora/RHI/: Commands.hpp  Descriptors.hpp  Device.hpp  Formats.hpp  Pipeline.hpp  RHI.hpp  Resources.hpp
engine/rhi/src/: RHI.cpp
engine/rhi/src/Null/: NullDevice.cpp  NullDevice.hpp
engine/rhi/src/OpenGL/: GLBuffer.cpp  GLBuffer.hpp  GLCapabilities.cpp  GLCapabilities.hpp  GLConversions.cpp  GLConversions.hpp  GLDescriptorSet.hpp  GLDevice.cpp  GLDevice.hpp  GLGraphicsPipeline.cpp  GLGraphicsPipeline.hpp  GLLoader.cpp  GLLoader.hpp  GLRenderPass.hpp  GLSampler.cpp  GLSampler.hpp  GLShaderModule.cpp  GLShaderModule.hpp  GLState.cpp  GLState.hpp  GLSwapchain.hpp  GLTexture.cpp  GLTexture.hpp  WGLContext.cpp  WGLContext.hpp
